--- a/Flutter/滑动原理.md
+++ b/Flutter/滑动原理.md
@@ -1,10 +1,10 @@
-## 可滚动视图的源码分析
-以`ListView`为例，父类是`ScrollView`，和滚动相关的主要是`Scrollable`和`Viewport`。其中，`Scrollable`负责监听手势和实现滚动的响应设计，`ViewPort`负责绘制界面。下面我们先来看`ScrollView`的`build`函数：
+## 可滚动视图的源码流程
+以`ListView`为例，父类是`ScrollView`，核心主要是`Scrollable`、`Viewport`和`Sliver`。其中，`Scrollable`负责监听手势和实现滚动的响应设计，`Viewport`负责管理`Sliver`布局绘制界面。下面我们先来看`ScrollView`的`build`函数：
 ```
 //ScrollView
 
 Widget build(BuildContext context) {
-  final List<Widget> slivers = buildSlivers(context);
+  final List<Widget> slivers = buildSlivers(context);//构建Sliver列表
   final AxisDirection axisDirection = getDirection(context);
   final ScrollController scrollController =
       primary ? PrimaryScrollController.of(context) : controller;
@@ -38,7 +38,7 @@ Widget build(BuildContext context) {
 
 Widget buildViewport(
   BuildContext context,
-  ViewportOffset offset,
+  ViewportOffset offset,//
   AxisDirection axisDirection,
   List<Widget> slivers,
 ) {
@@ -54,6 +54,10 @@ Widget buildViewport(
   );
 }
 ```
+> `center`：设置一个`Sliver`为`center`，`center`之前的`Sliver`会反序布局，`center`自己和之后的`Sliver`会正序布局（reverse的作用是整体反序）；`center`默认为`Slivers`中的第一个`Sliver`（_ViewportElement中设置的），而大多数情况，会使用`ListView`，它传给`Viewport`的slivers内仅一个SliverList，这种情况，center就是这个SliverList；使用CustomScrollView的情况，可以传入多个Sliver，这种情况才可能会去设置center<p/>
+anchor：以从上往下的常规列表方向为例，Viewport的初始位置为center的顶部与Viewport顶部对齐的位置，这个位置也被认为是滚动位置为0的位置；如果设置anchor为0.5，那么center的偏移初始就会加上半个viewport的高度，例如viewport为全屏高度，那么center在初始位置就会在屏幕中间开始。
+
+
 这里先知道`buildViewport`函数会创建`Viewport`即可，其中的`offset`从何而来，我们先继续看`Scrollable`（是一个`StatefulWidget`）对应的`ScrollableState`：
 ```
 Widget build(BuildContext context) {
@@ -86,14 +90,14 @@ Widget build(BuildContext context) {
 }
 ```
 1. `RawGestureDetector`：处理手势监听。
-2. 执行`viewportBuilder`：创建`Viewport`，传入的`position`是`ScrollPositionWithSingleContext`类型的对象，`ScrollPosition`就是`ViewportOffset`的子类。
+2. 执行`viewportBuilder`：创建`Viewport`，传入的`position`是`ScrollPosition`类型的对象，是`ViewportOffset`的子类。
 
-`ScrollPositionWithSingleContext`的集成关系为：
+`ScrollPosition`的继承关系为：
 ```
-ScrollPositionWithSingleContext --> ScrollPosition --> ViewportOffset --> ChangeNotifier
+ScrollPosition --> ViewportOffset --> ChangeNotifier
 ```
 
-目前可见，`ScrollView`通过`Scrollable`对应的状态对象`ScrollableState`创建了`RawGestureDetector`来完成手势监听，并且创建`Viewport`来显示界面。`Scrollable`内部持有`ScrollPositionWithSingleContext`，并把它传给了`Viewport`，它们都持有这个`ScrollPositionWithSingleContext`的目的是什么？我们再继续看`Viewport`对应创建`RenderObject`：
+目前可见，`ScrollView`通过`Scrollable`对应的状态对象`ScrollableState`创建了`RawGestureDetector`来完成手势监听，并且创建`Viewport`来显示界面。`Scrollable`内部持有`ScrollPosition`，并把它传给了`Viewport`，它们都持有这个`ScrollPosition`，并且`ScrollPosition`是一个`ChangeNotifier`类型，所以可以用来作为观察者通信：
 
 ```
 //Viewport
@@ -103,7 +107,7 @@ RenderViewport createRenderObject(BuildContext context) {
     axisDirection: axisDirection,
     crossAxisDirection: crossAxisDirection ?? Viewport.getDefaultCrossAxisDirection(context, axisDirection),
     anchor: anchor,
-    offset: offset,
+    offset: offset,//这个offset，就是ScrollPosition --> ViewportOffset
     cacheExtent: cacheExtent,
     cacheExtentStyle: cacheExtentStyle,
     clipBehavior: clipBehavior,
@@ -158,4 +162,290 @@ double setPixels(double newPixels) {
   return 0.0;
 }
 ```
-滑动事件引发的这几步调用，就执行到了`ScrollPosition`的`setPixels`函数，忽略计算相关的代码，其中调用`notifyListeners()`，而`Viewport`对应的`RenderViewportBase`中添加的回调就是重绘，所以滑动过程就会计算新的坐标，然后引发重绘。
+滑动事件引发的这几步调用，就执行到了`ScrollPosition`的`setPixels`函数，忽略计算相关的代码，其中调用`notifyListeners()`，而`Viewport`对应的`RenderViewportBase`中添加的回调就是`markNeedsLayout`，所以滑动过程就会计算新的坐标，然后引发布局绘制。
+
+而我们在ListView中传入的控件，会包装于SliverList中，SliverList作为Viewport的slivers，也就是children（这种情况，仅SliverList这一个child）。那么我们开始看Viewpoint对应的RenderViewport的布局流程：
+```
+//RenderViewport
+
+void performLayout() {
+  // 存储Viewport的宽度或高度到ScrollPosition中
+  switch (axis) {
+    case Axis.vertical:
+      offset.applyViewportDimension(size.height);
+      break;
+    case Axis.horizontal:
+      offset.applyViewportDimension(size.width);
+      break;
+  }
+  // Viewport对应的_ViewportElement中，因为ListView的情况没有设置center，那么会把slivers列表的第一个作为RenderViewport的center，而ListView的情况下，slivers也仅仅有一个SliverList，
+  // 所以这个center就是SliverList
+  if (center == null) {
+    assert(firstChild == null);
+    _minScrollExtent = 0.0;
+    _maxScrollExtent = 0.0;
+    _hasVisualOverflow = false;
+    offset.applyContentDimensions(0.0, 0.0);
+    return;
+  }
+  // 设置主轴和交叉轴的范围为Viewport的宽高
+  double mainAxisExtent;
+  double crossAxisExtent;
+  switch (axis) {
+    case Axis.vertical:
+      mainAxisExtent = size.height;
+      crossAxisExtent = size.width;
+      break;
+    case Axis.horizontal:
+      mainAxisExtent = size.width;
+      crossAxisExtent = size.height;
+      break;
+  }
+  // center的偏移调整，默认0
+  final double centerOffsetAdjustment = center!.centerOffsetAdjustment;
+  double correction;//需要更正的偏移值
+  int count = 0;
+  //尝试布局，如果不需要调整，则完成布局，如果需要调整，则再次尝试布局，尝试次数为10
+  do {
+    //根据主轴和交叉轴的范围，以及滚动量offset.pixels，来尝试布局
+    correction = _attemptLayout(mainAxisExtent, crossAxisExtent, offset.pixels + centerOffsetAdjustment);
+    if (correction != 0.0) {
+      offset.correctBy(correction);//如果需要调整，则调整滚动量
+    } else {
+      //不需要调整，则设置内容尺寸
+      if (offset.applyContentDimensions(
+            math.min(0.0, _minScrollExtent + mainAxisExtent * anchor),
+            math.max(0.0, _maxScrollExtent - mainAxisExtent * (1.0 - anchor)),
+         ))
+        break;
+    }
+    count += 1;
+  } while (count < _maxLayoutCycles);
+  ...//超过最大重试次数，会抛出异常
+}
+```
+
+手指往上滑动，内容往上滚动，绘制下面的内容， offset.pixels 正值增大
+
+继续看`_attemptLayout`：
+```
+//RenderViewport
+
+double _attemptLayout(double mainAxisExtent, double crossAxisExtent, double correctedOffset) {
+  _minScrollExtent = 0.0;
+  _maxScrollExtent = 0.0;
+  _hasVisualOverflow = false;
+  // 一般初始为0。如果手指往上滑，也就是内容往上移动，offset.pixels为正值，所以centerOffset会变为负值
+  final double centerOffset = mainAxisExtent * anchor - correctedOffset;
+  // 反向的剩余可绘制范围
+  final double reverseDirectionRemainingPaintExtent = centerOffset.clamp(0.0, mainAxisExtent);
+  // 正向的剩余可绘制范围
+  final double forwardDirectionRemainingPaintExtent = (mainAxisExtent - centerOffset).clamp(0.0, mainAxisExtent);
+  switch (cacheExtentStyle) {
+    case CacheExtentStyle.pixel:
+      _calculatedCacheExtent = cacheExtent; //默认250
+      break;
+    case CacheExtentStyle.viewport:
+      _calculatedCacheExtent = mainAxisExtent * _cacheExtent;
+      break;
+  }
+  //整个缓存范围，也就是viewport的高度加上前后的缓存范围。例如Viewport高500，加上两个缓存范围，就是1000
+  final double fullCacheExtent = mainAxisExtent + 2 * _calculatedCacheExtent!;
+  final double centerCacheOffset = centerOffset + _calculatedCacheExtent!;
+  //反序缓存范围，例如初始0位置，那么反序缓存范围就是250；内容往上滚动，centerOffset为-50，那么就是200；最小为0
+  final double reverseDirectionRemainingCacheExtent = centerCacheOffset.clamp(0.0, fullCacheExtent);
+  //正序缓存范围，例如初始0位置，那么正序缓存范围就是750；内容往上滚动，centerOffset为-50，那么就是800；最大为1000
+  final double forwardDirectionRemainingCacheExtent = (fullCacheExtent - centerCacheOffset).clamp(0.0, fullCacheExtent);
+  final RenderSliver? leadingNegativeChild = childBefore(center!);
+  // 对于ListView的情况，所有普通控件都是放在唯一一个SliverList中，所以仅仅只有center自己，没有兄弟Sliver
+  if (leadingNegativeChild != null) {
+    // negative scroll offsets
+    final double result = layoutChildSequence(
+      child: leadingNegativeChild,
+      scrollOffset: math.max(mainAxisExtent, centerOffset) - mainAxisExtent,
+      overlap: 0.0,
+      layoutOffset: forwardDirectionRemainingPaintExtent,
+      remainingPaintExtent: reverseDirectionRemainingPaintExtent,
+      mainAxisExtent: mainAxisExtent,
+      crossAxisExtent: crossAxisExtent,
+      growthDirection: GrowthDirection.reverse,
+      advance: childBefore,
+      remainingCacheExtent: reverseDirectionRemainingCacheExtent,
+      cacheOrigin: (mainAxisExtent - centerOffset).clamp(-_calculatedCacheExtent!, 0.0),
+    );
+    if (result != 0.0)
+      return -result;
+  }
+  // 所以直接看这里
+  return layoutChildSequence(
+    child: center,
+    scrollOffset: math.max(0.0, -centerOffset),
+    overlap: leadingNegativeChild == null ? math.min(0.0, -centerOffset) : 0.0,
+    layoutOffset: centerOffset >= mainAxisExtent ? centerOffset: reverseDirectionRemainingPaintExtent,
+    remainingPaintExtent: forwardDirectionRemainingPaintExtent,
+    mainAxisExtent: mainAxisExtent,
+    crossAxisExtent: crossAxisExtent,
+    growthDirection: GrowthDirection.forward,
+    advance: childAfter,
+    remainingCacheExtent: forwardDirectionRemainingCacheExtent,
+    cacheOrigin: centerOffset.clamp(-_calculatedCacheExtent!, 0.0),
+  );
+}
+```
+注意一下，centerOffset也就是Sliver的偏移是内容往上滚就减小，内容往下滚就增大；但是scrollOffset是内容往上滚就增大，是相反的。
+
+layoutChildSequence
+```
+double layoutChildSequence({
+  required RenderSliver? child, //从child（也就是一个Sliver）开始布局
+  required double scrollOffset, //作为传给child的SliverConstraints.scrollOffset数据参考
+  required double overlap, //是传给第一个sliver的SliverConstraints.overlap；传给后续的sliver的overlap将被之前的child输出的SliverGeometry影响
+  required double layoutOffset, //第一个sliver的布局偏移；会通过后续sliver的SliverGeometry.layoutExtent来更新
+  required double remainingPaintExtent, //第一个sliver的剩余绘制范围；会通过后续sliver的SliverGeometry.layoutExtent来更新
+  required double mainAxisExtent, //viewport的主轴范围，比如高度
+  required double crossAxisExtent, //viewport的交叉轴范围，比如宽度
+  required GrowthDirection growthDirection,  //增长方向
+  required RenderSliver? Function(RenderSliver child) advance, //获取下一个sliver
+  required double remainingCacheExtent, //剩余缓存范围
+  required double cacheOrigin,
+}) {
+
+  final double initialLayoutOffset = layoutOffset;
+  final ScrollDirection adjustedUserScrollDirection =
+      applyGrowthDirectionToScrollDirection(offset.userScrollDirection, growthDirection);
+  double maxPaintOffset = layoutOffset + overlap;
+  double precedingScrollExtent = 0.0;
+  // 循环处理各个Sliver
+  while (child != null) {
+    final double sliverScrollOffset = scrollOffset <= 0.0 ? 0.0 : scrollOffset;
+    final double correctedCacheOrigin = math.max(cacheOrigin, -sliverScrollOffset);
+    final double cacheExtentCorrection = cacheOrigin - correctedCacheOrigin;
+    // 调用Sliver的layout
+    child.layout(SliverConstraints(
+      axisDirection: axisDirection,
+      growthDirection: growthDirection,
+      userScrollDirection: adjustedUserScrollDirection,
+      scrollOffset: sliverScrollOffset,
+      precedingScrollExtent: precedingScrollExtent,
+      overlap: maxPaintOffset - layoutOffset,
+      remainingPaintExtent: math.max(0.0, remainingPaintExtent - layoutOffset + initialLayoutOffset),
+      crossAxisExtent: crossAxisExtent,
+      crossAxisDirection: crossAxisDirection,
+      viewportMainAxisExtent: mainAxisExtent,
+      remainingCacheExtent: math.max(0.0, remainingCacheExtent + cacheExtentCorrection),
+      cacheOrigin: correctedCacheOrigin,
+    ), parentUsesSize: true);
+
+    // 和 BoxRenderObject 布局类似，BoxRenderObject布局后，会设置size，parent会根据各个child的size来作为自己的size参考，或者其他child的位置偏移参考
+    // Sliver的情况，输入SliverConstraints，产生了 SliverGeometry
+
+    final SliverGeometry childLayoutGeometry = child.geometry!;
+    if (childLayoutGeometry.scrollOffsetCorrection != null)
+      return childLayoutGeometry.scrollOffsetCorrection!;
+    final double effectiveLayoutOffset = layoutOffset + childLayoutGeometry.paintOrigin;
+    // 更新Sliver对应的绘制偏移值
+    if (childLayoutGeometry.visible || scrollOffset > 0) {
+      updateChildLayoutOffset(child, effectiveLayoutOffset, growthDirection);
+    } else {
+      updateChildLayoutOffset(child, -scrollOffset + initialLayoutOffset, growthDirection);
+    }
+    maxPaintOffset = math.max(effectiveLayoutOffset + childLayoutGeometry.paintExtent, maxPaintOffset);
+    scrollOffset -= childLayoutGeometry.scrollExtent;
+    precedingScrollExtent += childLayoutGeometry.scrollExtent;
+    layoutOffset += childLayoutGeometry.layoutExtent;
+    if (childLayoutGeometry.cacheExtent != 0.0) {
+      remainingCacheExtent -= childLayoutGeometry.cacheExtent - cacheExtentCorrection;
+      cacheOrigin = math.min(correctedCacheOrigin + childLayoutGeometry.cacheExtent, 0.0);
+    }
+    updateOutOfBandData(growthDirection, childLayoutGeometry);
+    child = advance(child);
+  }
+  return 0.0;
+}
+```
+
+## 概述
+大多数控件是不能滑动的，它们基本都是使用包含`size`信息的`BoxConstraint`来约束宽高，并通过`offset`来确定位置。而可以滑动的控件，除了`SingleChildScrollView`仍然是使用`BoxConstraint`和`offset`来完成内部控件的滑动，其余例如ListView、PageView等，内部都会使用`Viewport`以及`SliverConstraint`来控制内部`Sliver`（普通控件会被包含于Sliver中）的滚动位置。
+
+### SliverConstraint
+`SliverConstraint`是`Viewport`传给`RenderSliver`的信息，那么我们先来看看`SliverConstraint`提供了哪些信息。
+
+* `axisDirection`：主轴方向，上、下、左、右
+* `growthDirection`：sliver的排列方向
+* `userScrollDirection`：用户的滑动方向
+* `scrollOffset`：sliver的滑动偏移量，例如axisDirection为下，growthDirection为正，那么偏移量就是第一个sliver的顶部距离viewport顶部的距离
+* `precedingScrollExtent`：
+* `overlap`：
+* `remainingPaintExtent`：Viewport剩余的可绘制范围
+* `crossAxisExtent`：交叉轴的范围，例如垂直情况，这就是sliver的宽度
+* `crossAxisDirection`：交叉轴的方向，跟Grid有关？
+* `viewportMainAxisExtent`：viewport的主轴范围，例如垂直情况，就是viewport的高度
+* `remainingCacheExtent`：
+* `cacheOrigin`：缓存的起点
+
+
+`RenderSliver`根据得到的`SliverConstraint`，得到`SliverGeometry`
+* scrollExtent：滚动范围，也就是当前Sliver的宽度或高度
+* paintOrigin：
+* paintExtent：
+* layoutExtent：
+* maxPaintExtent：
+* maxScrollObstructionExtent：
+* hitTestExtent：
+* visible：
+* hasVisualOverflow：
+* scrollOffsetCorrection：
+* cacheExtent：
+
+
+
+Scrollable 内部包含手势监听
+
+Viewport 接收滑动通知
+
+ScrollNotification
+
+Sliver  Flutter有两种布局体系 Box, Sliver，分别对应BoxConstraint，和SliverConstraint。在layout的过程中，每个Sliver 都接收 SliverConstraints 计算返回一个 SliverGeometry，可以类比于RenderBox 接收 BoxConstraints 返回一个 Size。Viewport内部就会使用Sliver布局体系，例如SliverList就是接收Sliver布局体系的widget，而我们的普通Widget也会被SliverList包住后在Viewport中使用。
+
+Viewport通过PaintingContext间接持有Canvas进行绘制。Offset指笛卡尔坐标系下的坐标，与Axis方向无关。绘制时只需改变对应RenderObject的Offset即可实现滚动的效果, 这样就不必重新创建RenderObject。所以我们如果想实现性能较高的列表视图，就要尝试去减少重新布局Child
+
+
+
+只有SingleChildScrollView内部还是使用BoxConstraint
+
+
+
+使用NestedScrollView本质就是NestedScrollViewViewport嵌套Viewport，NestedScrollView是CustomScrollView的封装。
+
+PrimaryScrollController
+
+
+CustomScrollView可以将多个Sliver"粘"在一起，这些Sliver共用CustomScrollView的Scrollable，所以最终才实现了统一的滑动效果。
+
+Sliver不会包含Scrollable Widget，也就是说Sliver本身不包含滚动交互模型
+
+
+
+Scrollable --> Viewport --> Sliver --> 普通控件  例如ListView，里面也是这一套，其中的Sliver对应的就是SliverList
+
+
+
+普通ListView之类的，都是传入普通控件，内部会把普通控件包装于Sliver中，Sliver给子控件传的是BoxConstraint；所以如果也传入Sliver，本来的Sliver传给我们的Sliver的是BoxConstraint，应该会发生异常
+
+同理，CustomScrollView需要直接传Sliver，所以如果传的是普通控件，也会不匹配约束类型。
+
+
+
+list滚动，不会重新build自身，只会调用itemBuilder来构建item，然后重新layout和paint；element和renderObject也只会存在屏幕范围加前默认250缓冲范围的数量。
+
+如果item使用了AutomaticKeepAliveClientMixin，则可以避免滚动中不断调用itemBuilder，会根据index缓存element和renderObject。开启keepAlive后，可以回收复用，但是没有Android里面的缓存池大小限制，所以如果列表很长，会占用较多的内存。
+
+
+listview如果setState，会调用SliverMultiBoxAdaptorElement 的performRebuild
+
+childCount之类的变化，delegate内的属性都是final，所以更新后还是要使用setState来重新build。
+
+SliverChildBuilderDelegate内，如果设置了childCount，那么index在该范围内，才会调用我们写的build函数，否则直接返回null，在RenderSliverList中会判断返回了null，就表示列表到达边界了。
+
+
+http://soiiy.com/life-style/10691.html
