--- a/Flutter/状态管理.md
+++ b/Flutter/状态管理.md
@@ -150,7 +150,7 @@ void updated(InheritedWidget oldWidget) {
 ```
 将调用我们在`InheritedWidget`重写的`updateShouldNotify`方法，用于判断是否要通知关联的子元素。
 
-如果需要通知，`super.updated`将找到之前关联依赖的子元素，调用子元素的`didChangeDependencies`方法；对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，子元素就会把`_didChangeDependencies`改为true。
+如果需要通知，`super.updated`将找到之前关联依赖的子元素，调用子元素的`didChangeDependencies`方法，引发`markNeedsBuild`；对于`StatefulWidget`对应的`StatefulElement`类型，重写了`didChangeDependencies`方法，子元素就会把`_didChangeDependencies`改为true。
 
 然后在第二步，执行`rebuild`时，最终执行到子元素的`performRebuild`方法，对于这里是`StatefulElement`：
 ```
