--- a/Flutter/自定义组件.md
+++ b/Flutter/自定义组件.md
@@ -37,7 +37,7 @@ void layout(Constraints constraints, { bool parentUsesSize = false }){
 `RenderObject`的属性和方法说明：
 * `sizedByParent`属性默认为false，如果重写为true，表示父节点传来的`constraints`是决定当前节点尺寸的唯一参考，那么`size`应该在`performResize()`中通过`constraints`去设置，而**不用**在`performLayout()`中再参考子节点的`size`。当然，这只是一种约定，但建议遵守。
 * `performResize()`：如果重写`sizedByParent`属性为true，layout会调用此方法，作用如上所述。
-* `performLayout()`：如果有子节点的话，一是调用`child.layout`来对子节点布局（子节点确定自身尺寸），二是设置`child.parentData.offset`来对子节点**定位**；无论有没有子节点，都需要设置自身尺寸，但如果设置了`sizedByParent`，则不需要。
+* `performLayout()`：如果有子节点的话，一是调用`child.layout`来对子节点布局（子节点确定自身尺寸，相当于Android的测量），二是设置`child.parentData.offset`来对子节点**定位**；无论有没有子节点，都需要设置自身尺寸，但如果设置了`sizedByParent`，则不需要。并且，无论有没有子节点，都要设置自己的size。
 
 > 在Flutter应用启动流程笔记中，写到我们传的根Widget对应的RenderObject会被强制铺满屏幕，就是因为`RenderView`的`performLayout`方法中，传给child的约束就是屏幕的大小
 
