--- a/Android/优化/网络优化.md
+++ b/Android/优化/网络优化.md
@@ -19,6 +19,7 @@ https://blog.helong.info/blog/2015/09/07/tls-protocol-analysis-and-crypto-protoc
 4. 使用protobuf格式，而不是json
 5. 业务变更，及时调整冗余的json数据
 6. 使用gzip压缩
+7. 减少请求次数
 
 http 1.1 长连接keep-alive  cache-control
 http 2.0 二进制、多路复用、头部压缩、服务器推送：服务器可以额外的向客户端推送资源，而无需客户端明确的请求
