--- a/Android/换肤.md
+++ b/Android/换肤.md
@@ -1,6 +1,9 @@
 Android 换肤
 
-setTheme  但要在setContentView前才有效，后面调用无效，除非使用recreate重新创建activity，否则需要自行遍历view
+* setTheme  但要在setContentView前才有效，后面调用无效，除非使用recreate重新创建activity，否则需要自行遍历view
+* 官方dark mode，系统会发出广播
+* 插件化，加载新的resources
+* 不换resources，而是拦截资源文件加载过程 spreloaddrawable
 
 热更新替换资源id引用的内容
 
@@ -8,6 +11,4 @@ UiModeManager
 
 LayoutInflater.Factory2
 
-  应用内换
-
-  插件apk资源包 反射调用 AssetManager反射调用addAssetPath，获取Resources
+插件apk资源包 反射调用 AssetManager反射调用addAssetPath，获取Resources
