Android优化笔记更新

--- a/Android/优化/内存优化.md
+++ b/Android/优化/内存优化.md
@@ -55,7 +55,7 @@ dump java Heap是捕获当前的内存分配情况，所以无法知道某个对
 ### MAT(Memory Analyzer Tool)
 MAT的下载路径：https://www.eclipse.org/mat/downloads.php
 
-1. Head Dump 得到 hprof文件，可以通过Android Studio的Profiler中的dump java Heap（也有如jmap等命令可以生成），然后导出
+1. Head Dump 得到 hprof文件，可以通过Android Studio的Profiler中的dump java Heap，或者代码中`Debug.dumpHprofData("path")`等方式，然后导出
 2. 使用 hprof-conv 转换为MAT可识别的hprof文件
 ```
 ~/Library/Android/sdk/platform-tools/hprof-conv ~/Downloads/memory-20200820T115432.hprof ~/Downloads/xxx.hprof
@@ -109,3 +109,9 @@ float proportion = (float) javaUsed / javaMax;
 ```
 
 * onTrimMemory 的level参数，例如TRIM_MEMORY_UI_HIDDEN，是应用内所有UI组件都隐藏时，这时我们可以释放UI相关的资源，比如缓存，还有其他各种值对应不同的情况
+
+## 内存监控
+一般在发生OOM或者一定阈值时，通过`Debug.dumpHprofData("path")`获取内存快照，然后传回服务器，开发人员再根据内存快照分析。但要注意两个点，一是dump过程会暂停所有线程，容易造成卡顿和ANR，常用做法为在后台才执行或者fork后在子进程执行dump；二是快照文件会很大，需要做裁剪和压缩，但dump后会先占用大量存储空间，更高效的就是在dump时hook系统调用`open`和`write`，在写入过程就过去掉了要裁剪的数据。可以参考[快手KOOM](https://github.com/KwaiAppTeam/KOOM)和[字节的tailor](https://github.com/bytedance/tailor)
+
+### Native内存泄漏监控
+参考：[字节Raphael](https://juejin.cn/post/6953430618726203399)
