更新Android嵌套滚动笔记

--- a/Android/View/滑动冲突.md
+++ b/Android/View/滑动冲突.md
@@ -1,24 +1,20 @@
-这个文章可以参考下[玩转 Android 嵌套滚动](https://juejin.im/entry/58686511ac502e006d6f259b)
-## 正交的滑动冲突
-&emsp;&emsp;一般内层`View`和外层`View`都可以滑动时，对于分别响应`X`轴和`Y`轴的滑动，我们可以自行通过滑动角度或者`x`或`y`的滑动长度来得知是横向滑动还是纵向滑动，从而处理内外层的滑动冲突。正交方向的滑动冲突处理比较简单，这里只大概描述。
+## 事件拦截方案
+### 正交的滑动冲突
+一般内层`View`和外层`View`都可以滑动时，对于分别响应`X`轴和`Y`轴的滑动，我们可以自行通过滑动角度或者`x`或`y`的滑动长度来得知是横向滑动还是纵向滑动，从而处理内外层的滑动冲突。正交方向的滑动冲突处理比较简单，这里只大概描述。
 
 **一般使用外部拦截法，因为内部拦截法要同时重写内外层，耦合度太高**
 
 * 外部拦截法：在外层的`onInterceptTouchEvent`方法中，`move`事件时如果外层需要此事件则拦截，然后由外层处理。比如外层是纵向滑动，那么检测到是纵向滑动就拦截。
-
 * 内部拦截法：在内层的`dispatchTouchEvent`中，`down`事件禁止外层拦截，在move事件时判断外层需要此事件，则允许外层拦截，而外层的`onInterceptTouchEvent`中只要不是down事件就拦截，所以只要内层允许拦截外层就会拦截。
 
-
-
-## 嵌套滑动（同向的滑动冲突）
-####方法1：纯事件拦截与派发方案
+### 同向的滑动冲突
 比如竖直滑动的容器内部有一个`header`和一个`ScrollView`，有两个关键点：
 * 1.内部`ScrollView`手指下拉使其滑动到顶部时，应该让外部容器接管事件，露出`header`。
 * 2.手指上拉使`header`完全隐藏后，这时应该再次让内部`ScrollView`来处理事件。
 
-&emsp;&emsp;这里我们同样使用外部拦截法，但正常情况下拦截后child不能再处理事件，那么我们上拉使`header`完全隐藏后，内部child无法再处理事件而滑动。所以我们需要在此时再给内部`ScrollView`强行分发一个  `down`事件，使内部重新接管事件。
+这里我们同样使用外部拦截法，但正常情况下拦截后child不能再处理事件，那么我们上拉使`header`完全隐藏后，内部child无法再处理事件而滑动。所以我们需要在此时再给内部`ScrollView`强行分发一个`down`事件，使内部重新接管事件。
 
-布局是`CustomViewGroup` 内部第一个是header，高50dp，第二个是ScrollView。布局初始就scrollY为50dp，以隐藏header。这里主要展示拦截和强行分发的逻辑。
+布局是`CustomViewGroup` 内部第一个是header，高50dp，第二个是ScrollView。布局初始就scrollY为50dp，以隐藏header。这里主要展示拦截和强行分发的逻辑（代码只为简单展示核心逻辑，没有过多检查各种逻辑判定的严谨性，实际开发中应当参考android官方组件）。
 
 ```
 public class CustomViewGroup extends LinearLayout {
@@ -91,74 +87,299 @@ public class CustomViewGroup extends LinearLayout {
 ```
 > 可以看出这种方式有点hack。也有不重写onInterceptTouchEvent而完全重写dispatchTouchEvent的方式，该拦截时就不分发，该分发就分发。
 
+> 触摸事件分发中，ViewGroup在首次down事件时，会重置requestDisallowInterceptTouchEvent设置的标志位，所以我们调用requestDisallowInterceptTouchEvent的时机需要注意一下。比如在初始化ViewGroup实例时就调用是不会生效的，因为在触摸事件开始时会被重置。
 
-#### 方法2：官方NestedScrolling机制
-&emsp;&emsp;`Android 5.0`开始官方提供了**NestedScrolling**机制用于嵌套滑动。在child准备滑动时先询问parent是否要消耗部分或全部滑动，待parent处理后child再处理。
+## 官方NestedScrolling方案
+`Android 5.0`开始官方提供了`NestedScrolling`机制用于嵌套滑动。在事件拦截方案中，parent是主动方，由parent通过拦截控制谁处理事件，而在`NestedScrolling`机制中，child成为了主动方，更加符合实际交互中child优先的情况。
 
-&emsp;&emsp;**5.0**及以上的版本对`view`和`viewGroup`已经实现这些接口，继承`view`和`viewGroup`的所有控件就都有了嵌套滑动方法。而要兼容**5.0**以下版本则需要我们自行继承这些接口并实现方法。
+先通过一个场景来提前了解一下NestedScrolling的大致思想：child和parent都是纵向滑动的控件，child往上滑动（手指往下拉），先询问parent：我要准备往上滚动了10px；parent回复child：你执行吧，我不做处理；child完成滚动，但只滚动了5px就到了顶部，child告诉parent：我滚动了5px，还剩5px，但我到顶部了，不能再消费滚动距离的，你来处理剩余的吧；parent接收到消息后，自己滚动了5px，然后告诉child：我把5px都滚动了。
 
-###### NestedScrollingChild
+在`NestedScrolling`中，分为child和parent两个角色，分别对应嵌套滑动的内层和外层view，但并不一定是直接的父子view关系。child和parent两个角色分别要实现一套接口，用于嵌套滑动时相互通信。接口分别是`NestedScrollingChild`和`NestedScrollingParent`，位于androidx库中，因为`NestedScrolling`有版本更新，部分方法增加参数，但差别不大，目前最新是第三版。Android Framework中的View和ViewGroup没有显式声明实现接口，但也实际实现了这些方法，但这些方法并没有跟随androidx库的`NestedScrolling`相关接口同步新增更新的方法，所以我们开发的时候最好还是使用androidx库中的接口，而不是Android Framework中的View和ViewGroup的自带方法。
 
-* `setNestedScrollingEnabled`和`isNestedScrollingEnabled`：是否启用嵌套滑动的**set/get**
-* `boolean startNestedScroll(@ScrollAxis int axes)`：当嵌套滑动开始产生时调用这个方法，通常在ACTION_DOWN里面调用，会去寻找`parent`（不一定是直接`parent`）处理。传参为滑动方向
-* `void stopNestedScroll()`: 结束嵌套滑动，通常在up或cancel事件中调用
-* `boolean hasNestedScrollingParent()`：返回`true`表示有处理嵌套滑动的`parent`。嵌套滚动`parent`的存在表示此视图已启动嵌套滚动，并且已被 `parent`（不一定是直接`parent`）接受。实际就是在`parent`的 `onStartNestedScroll`返回`true`后，此方法才会返回`true`，原因可见`startNestedScroll`源码。
-* `boolean dispatchNestedPreScroll(int dx, int dy, @Nullable int[] consumed, @Nullable int[] offsetInWindow)`：处理滑动前让`parent`先消费距离
-* `boolean dispatchNestedScroll(int dxConsumed, int dyConsumed,
-            int dxUnconsumed, int dyUnconsumed, @Nullable int[] offsetInWindow)`：用途：`parent`消费后，`child`再消费后还没消费完则调用此方法再分发给`parent`，传参是child消费了的和没有消费的距离，都传给parent用于具体操作。（child没有消费完距离的情况，估计是滑到顶或底部了，然后就分发给parent来处理）
-
-
-* `boolean dispatchNestedFling(float velocityX, float velocityY, boolean consumed)`和`boolean dispatchNestedPreFling(float velocityX, float velocityY)`与上述嵌套滑动类似
-
-
-###### NestedScrollingParent
-
-* `boolean onStartNestedScroll(View child, View target, int nestedScrollAxes)`：是否处理child的嵌套滑动
-* `void onNestedScrollAccepted(View child, View target, int nestedScrollAxes)`：接收处理的回调，默认保存方向信息，可自行安排
-* `void onStopNestedScroll(View target)`：child调用停止时，parent回调
-* `void onNestedPreScroll(View target, int dx, int dy, int[] consumed)`：child调用`dispatchNestedPreScroll`时，parent的消耗距离处理
-* `void onNestedScroll(View target, int dxConsumed, int dyConsumed, int dxUnconsumed, int dyUnconsumed)`：child调用`dispatchNestedScroll`时，parent的消耗距离处理
-* `boolean onNestedFling(View target, float velocityX, float velocityY, boolean consumed)`和`boolean onNestedPreFling(View target, float velocityX, float velocityY)`与上面嵌套滑动类似。
-* `int getNestedScrollAxes()`：返回保存的滑动方法
-
-`NestedScrollingChildHelper`：实现了child的接口方法，只需在child实现接口的方法中调用NestedScrollingChildHelper中的方法。
-`NestedScrollingParentHelper`：同上
-
-![嵌套滑动方法流程](https://upload-images.jianshu.io/upload_images/3468445-cf523b110799a37e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-###### 嵌套滑动的使用方式
-&emsp;&emsp;`child`调用`NestedScrollingChild`接口的方法，直接使用`NestedScrollingChildHelper`写好的代码即可，只需在调用了这些代码后自行处理滑动距离等业务。
-&emsp;&emsp;而`parent`则需要根据具体情况自行重写`onStartNestedScroll`、`onNestedPreScroll`、`onNestedPreFling`等方法，因为`NestedScrollingParentHelper`只帮我们实现了`onNestedScrollAccepted`、`getNestedScrollAxeson`和`StopNestedScroll`方法。
-
---------------------------------------------
-&emsp;&emsp;作为开发者的任务，对于`child`，接口的实现官方都写好了，我们要写的是调用接口方法后的代码，而`parent`的任务则是自行实现接口方法的代码。**比如**：`child`调用`dispatchNestedPreScroll`方法后，会引发调用`parent`的`onNestedPreScroll`方法，这里的开发任务就是在`child`调用`dispatchNestedPreScroll`后的处理代码和`parent`实现`onNestedPreScroll`的代码。
-&emsp;&emsp;在我们平常的业务中，`child`一般是`RecyclerView`等实现并调用了`child`接口且写好了调用后的逻辑的控件，我们只需对外层重写部分`parent`接口方法来实现具体效果。
-
-参考鸿洋的代码，使用嵌套滑动机制实现上面带header滑动效果。
+我们先看一下接口的内容，这里不理解没关系，看完接口内容后，会介绍具体的用法。
+1. NestedScrollingChild
+这里以最新的NestedScrollingChild3为例：
 ```
-//外层控件，内层可以使用RecyclerView等
-public class StickyNavLayout extends LinearLayout implements NestedScrollingParent
-{
-    @Override
-    public boolean onStartNestedScroll(View child, View target, int nestedScrollAxes)
-    {
-        return (nestedScrollAxes & ViewCompat.SCROLL_AXIS_VERTICAL) != 0;
-    }
-    @Override
-    public void onNestedPreScroll(View target, int dx, int dy, int[] consumed)
-    {
-        boolean hiddenTop = dy > 0 && getScrollY() < mTopViewHeight;
-        boolean showTop = dy < 0 && getScrollY() > 0 && !ViewCompat.canScrollVertically(target, -1);
+// 设置是否启用嵌套滑动
+void setNestedScrollingEnabled(boolean enabled);
+boolean isNestedScrollingEnabled();
 
-        if (hiddenTop || showTop)
-        {
-            scrollBy(0, dy);
-            consumed[1] = dy;
+// 当嵌套滑动开始产生时调用这个方法，通常在ACTION_DOWN里面调用，会去寻找`parent`（不一定是直接`parent`）处理，
+// axes：滑动的方向，横向和纵向
+// type：滚动类型，触摸滚动和非触摸滚动，非触摸的滚动实际就是fling，也就是惯性滑动
+boolean startNestedScroll(@ScrollAxis int axes, @NestedScrollType int type);
+
+// 返回true表示有处理嵌套滑动的`parent`。嵌套滚动`parent`的存在表示此视图已启动嵌套滚动，并且已被 `parent`（不一定是直接`parent`）接受。实际就是在`parent`的 `onStartNestedScroll`返回`true`后，此方法就会返回`true`，原因可见`startNestedScroll`源码。
+boolean hasNestedScrollingParent(@NestedScrollType int type);
+
+// child滑动（一步滑动，并非整个滑动过程）前，提供给parent消费部分或全部滚动操作的时机。（大多数情况，parent不会先主动消费，目前只看到SwipeRefreshLayout会消费）
+// 其他参数容易明白作用，offsetInWindow需要注意一下。调用dispatchNestedPreScroll后，parent的onNestedPreScroll会被调用，在onNestedPreScroll内，parent可能会滚动，导致child的位置产生偏移，
+// 在onNestedPreScroll前后记录child的位置，计算差值。这个差值会用于child调整内部的坐标计算，比如记录本次触摸事件Y坐标为100，经过parent的onNestedPreScroll后，导致child的纵向位置产生了+50的偏移，那么应该调整本次Y坐标为100-50=50，因为现在手指相对于child的位置应该是50；在计算手指滑动速度上，也会使用。
+boolean dispatchNestedPreScroll(int dx, int dy, @Nullable int[] consumed,
+            @Nullable int[] offsetInWindow, @NestedScrollType int type);
+
+// child滑动（同上）后，告诉parent自己的滑动情况，如果还有剩余，parent还可以再处理
+boolean dispatchNestedScroll(int dxConsumed, int dyConsumed,
+        int dxUnconsumed, int dyUnconsumed, @Nullable int[] offsetInWindow,
+        @NestedScrollType int type);
+
+// child处理fling前，先通知parent。parent消费了fling则返回true，否则返回false
+boolean dispatchNestedPreFling(float velocityX, float velocityY)与上述嵌套滑动类似
+
+// child通知parent，自己是否消费fling。
+boolean dispatchNestedFling(float velocityX, float velocityY, boolean consumed)
+
+// 结束嵌套滑动，通常在up或cancel事件中调用
+void stopNestedScroll(@NestedScrollType int type);
+```
+
+2. NestedScrollingParent
+最新的NestedScrollingParent3对应接口
+```
+// 是否接受child的初始嵌套滚动操作，一般根据滚动方向是否符合来判断，或者其他具体情况。
+boolean onStartNestedScroll(@NonNull View child, @NonNull View target, @ScrollAxis int axes,
+        @NestedScrollType int type);
+
+// onStartNestedScroll返回true后，就会被调用，一般在这里记录滚动方向和类型
+void onNestedScrollAccepted(@NonNull View child, @NonNull View target, @ScrollAxis int axes,
+        @NestedScrollType int type);
+
+// child调用dispatchNestedPreFling后，会调用parent的此方法
+void onNestedPreScroll(@NonNull View target, int dx, int dy, @NonNull int[] consumed,
+        @NestedScrollType int type);
+
+// child调用dispatchNestedScroll后，会调用parent的此方法
+void onNestedScroll(@NonNull View target, int dxConsumed, int dyConsumed, int dxUnconsumed,
+        int dyUnconsumed, @ViewCompat.NestedScrollType int type, @NonNull int[] consumed);
+
+// child调用dispatchNestedPreFling后，会调用parent的此方法
+boolean onNestedPreFling(@NonNull View target, float velocityX, float velocityY);
+
+// child调用dispatchNestedFling后，会调用parent的此方法
+boolean onNestedFling(@NonNull View target, float velocityX, float velocityY, boolean consumed);
+
+// child调用stopNestedScroll后，会调用parent的此方法
+void onStopNestedScroll(@NonNull View target, @NestedScrollType int type);
+
+// 一般实现就是获取onNestedScrollAccepted中记录的方向
+@ScrollAxis
+int getNestedScrollAxes();
+```
+
+### 使用流程
+现在我们来学习这些接口是如何配合使用的，以及它们的实现内容，从而了解如何完成嵌套滑动的通信（从NestedScrollView的实现流程中分析）。
+
+1. ACTION_DOWN：首先在child的`ACTION_DOWN`时，调用`startNestedScroll`，方向比如是纵向，因为这里是触摸引发滑动，所以类型传入TYPE_TOUCH
+```
+// down事件时，记录初始Y坐标，并调用startNestedScroll
+int y = (int) ev.getY()
+mLastMotionY = y
+startNestedScroll(ViewCompat.SCROLL_AXIS_VERTICAL, ViewCompat.TYPE_TOUCH);
+```
+
+startNestedScroll的内容一般使用NestedScrollingChildHelper的实现
+```
+public boolean startNestedScroll(@ScrollAxis int axes, @NestedScrollType int type) {
+    if (hasNestedScrollingParent(type)) {
+        // 已经调用过startNestedScroll，就跳过
+        return true;
+    }
+    // 核心就是找到onStartNestedScroll返回true的直接或间接parent
+    if (isNestedScrollingEnabled()) {
+        ViewParent p = mView.getParent();
+        View child = mView;
+        while (p != null) {
+            if (ViewParentCompat.onStartNestedScroll(p, child, mView, axes, type)) {
+                setNestedScrollingParentForType(type, p);//记录该parent
+                ViewParentCompat.onNestedScrollAccepted(p, child, mView, axes, type);
+                return true;
+            }
+            if (p instanceof View) {
+                child = (View) p;
+            }
+            p = p.getParent();
         }
     }
+    return false;
 }
+```
+这一步也就是调用startNestedScroll，引发配合嵌套滑动的parent的onStartNestedScroll和onNestedScrollAccepted回调。嵌套滚动的child和parent之间建立了关联，并设置了嵌套滚动的状态。
+```
+// 例如NestedScrollView的实现，也就是判断是纵向滚动即可
+public boolean onStartNestedScroll(@NonNull View child, @NonNull View target, int axes,
+        int type) {
+    return (axes & ViewCompat.SCROLL_AXIS_VERTICAL) != 0;
+}
+
+// onNestedScrollAccepted一般使用NestedScrollingParentHelper的实现，即记录滚动的方向
+public void onNestedScrollAccepted(@NonNull View child, @NonNull View target,
+        @ScrollAxis int axes, @NestedScrollType int type) {
+    if (type == ViewCompat.TYPE_NON_TOUCH) {
+        mNestedScrollAxesNonTouch = axes;
+    } else {
+        mNestedScrollAxesTouch = axes;
+    }
+}
+```
+
+2. ACTION_MOVE：一般嵌套滚动的child的`ACTION_MOVE`时，会触发滚动，所以在这里，滚动前先调用`dispatchNestedPreScroll`：
+```
+int[] mScrollConsumed = new int[2];
+
+int y = ev.getY();
+int deltaY = mLastMotionY - y;
+
+if (dispatchNestedPreScroll(0, deltaY, mScrollConsumed, mScrollOffset,
+        ViewCompat.TYPE_TOUCH)) {
+    deltaY -= mScrollConsumed[1];
+}
+mLastMotionY = y - mScrollOffset[1];
+```
+
+`dispatchNestedPreScroll`采用NestedScrollingChildHelper的实现，返回true，表示parent消费了部分或全部滚动距离：
+```
+public boolean dispatchNestedPreScroll(int dx, int dy, @Nullable int[] consumed,
+        @Nullable int[] offsetInWindow, @NestedScrollType int type) {
+    if (isNestedScrollingEnabled()) {
+        final ViewParent parent = getNestedScrollingParentForType(type);
+        if (parent == null) {
+            return false;
+        }
+        if (dx != 0 || dy != 0) {
+            int startX = 0;
+            int startY = 0;
+            // 记录child的原本位置
+            if (offsetInWindow != null) {
+                mView.getLocationInWindow(offsetInWindow);
+                startX = offsetInWindow[0];
+                startY = offsetInWindow[1];
+            }
+            if (consumed == null) {
+                consumed = getTempNestedScrollConsumed();
+            }
+            consumed[0] = 0;
+            consumed[1] = 0;
+            ViewParentCompat.onNestedPreScroll(parent, mView, dx, dy, consumed, type);
+            // 根据child的原本位置和现位置，计算出经过parent的onNestedPreScroll后导致的偏移，child可以用这个数据来调整自己内部的滑动坐标计算，比如滑动速度、距离
+            if (offsetInWindow != null) {
+                mView.getLocationInWindow(offsetInWindow);
+                offsetInWindow[0] -= startX;
+                offsetInWindow[1] -= startY;
+            }
+            return consumed[0] != 0 || consumed[1] != 0;
+        } else if (offsetInWindow != null) {
+            offsetInWindow[0] = 0;
+            offsetInWindow[1] = 0;
+        }
+    }
+    return false;
+}
+```
+dx和dy表示准备滚动的距离，consumed数组传给parent，用于parent告诉child，parent消费了多少距离。代码中除了offsetInWindow这个偏移量计算的逻辑，其实主要就是调用parent的`onNestedPreScroll`，以NestedScrollView为例：
+```
+// NestedScrollView只是简单的再分发到parent，自己不会消费，因为NestedScrollView支持多层嵌套
+public void onNestedPreScroll(@NonNull View target, int dx, int dy, @NonNull int[] consumed,
+        int type) {
+    dispatchNestedPreScroll(dx, dy, consumed, null, type);
+}
+```
+
+child调用完`dispatchNestedPreScroll`后，也就经过了parent可能的消费处理，现在自己就可以根据剩余的滚动距离，自己来滚动，这部分我们省略。自己滚动完后，则应该调用`dispatchNestedScroll`来告诉parent，自己的滚动情况：
+```
+// 告诉parent的信息，根据参数可知，比如scrolledDeltaY表示child滚动了多少，unconsumedY表示还有多少没有消费，比如child已经滚到顶部了
+dispatchNestedScroll(0, scrolledDeltaY, 0, unconsumedY, mScrollOffset,
+                            ViewCompat.TYPE_TOUCH, mScrollConsumed);
+```
+`dispatchNestedScroll`同样是使用NestedScrollingChildHelper的实现，它和`dispatchNestedPreScroll`的实现类似，不同的是这次调用的是parent的`onNestedScroll`：
+```
+// NestedScrollView的实现，就是自己来滚动child不能消费的距离
+public void onNestedScroll(@NonNull View target, int dxConsumed, int dyConsumed,
+        int dxUnconsumed, int dyUnconsumed, int type, @NonNull int[] consumed) {
+    onNestedScrollInternal(dyUnconsumed, type, consumed);
+}
+private void onNestedScrollInternal(int dyUnconsumed, int type, @Nullable int[] consumed) {
+    final int oldScrollY = getScrollY();
+    scrollBy(0, dyUnconsumed);
+    final int myConsumed = getScrollY() - oldScrollY;
+    if (consumed != null) {
+        consumed[1] += myConsumed;
+    }
+    final int myUnconsumed = dyUnconsumed - myConsumed;
+    // 因为支持多层嵌套，所以parent也会作为child来通知自己的parent
+    mChildHelper.dispatchNestedScroll(0, myConsumed, 0, myUnconsumed, null, type, consumed);
+}
+```
+这里其实可以看出来，child不能消费，parent来消费，就对应了child滑动顶部或底部，继续滑动时，parent就会开始滚动的这种交互场景。
+
+3. ACTION_UP/ACTION_CANCEL：松手的时候，对应到fling惯性滚动，一般核心逻辑如下（cancel只结束，不惯性滚动）。
+```
+int initialVelocity = (int) velocityTracker.getYVelocity(mActivePointerId);
+
+if (!dispatchNestedPreFling(0, -initialVelocity)) {
+    dispatchNestedFling(0, -initialVelocity, true);
+    fling(-initialVelocity);
+}
+
+stopNestedScroll(ViewCompat.TYPE_TOUCH);
+```
+`dispatchNestedPreFling`引发调用嵌套滚动parent的`onNestedPreFling`，NestedScrollView的实现只是再往上嵌套转发，如果上层没有嵌套parent，就返回false了。所以一般会继续执行`dispatchNestedFling`，引发嵌套滚动parent调用`onNestedFling`。`dispatchNestedFling`的前两个参数为x和y轴的速度，第三个参数告诉parent，自己是否已经消费了fling。
+```
+// NestedScrollView作为parent，如果child传的consumed为false，表示child没有消费fling，那么parent就会消费
+public boolean onNestedFling(
+        @NonNull View target, float velocityX, float velocityY, boolean consumed) {
+    if (!consumed) {
+        dispatchNestedFling(0, velocityY, true);
+        fling((int) velocityY);
+        return true;
+    }
+    return false;
+}
+```
+
+#### 惯性传递
+在惯性滑动中，child如果惯性滑动到了顶部，应该还需要传递到parent继续惯性滚动，fling一般是使用Scroller，所以还需要在`computeScroll()`方法中，继续使用`dispatchNestedPreScroll`和`dispatchNestedScroll`，逻辑和`ACTION_MOVE`中类似，但不同是，之前使用的滚动类型都是`TYPE_TOUCH`，为了区分，这里需要使用`TYPE_NON_TOUCH`。
+
+> `startNestedScroll`和`stopNestedScroll`在onInterceptTouchEvent和onTouchEvent方法的down和up/cancel最好分别都调用，`stopNestedScroll`还应该在`computeScroll()`判断惯性滑动结束时调用。`startNestedScroll`和`stopNestedScroll`都做了多次调用跳过的逻辑，所以可以放心多次调用。多次调用的原因，我认为是onInterceptTouchEvent和onTouchEvent在某些情况只会调用一个，比如没有拦截child的事件，就只会调用自己的onInterceptTouchEvent，不会调用onTouchEvent，两处都调用更为保险。
+
+#### 使用总结
+* 👇 用户触摸屏幕：在ACTION_DOWN事件中，view将调用startNestedScroll()，由近到远找到返回 true 的parent，返回 true 意味着parent对这个嵌套滚动感兴趣。如果没有任何层级的parent返回 true，则嵌套滚动将被取消，view将按普通滚动来完成工作。此时应该使用TYPE_TOUCH。
+
+* 👋 用户移动手指：在每个ACTION_MOVE事件上，view将调用dispatchNestedPreScroll()向嵌套滚动的parent发送事件，允许它消费手指移动的任意距离。如果父级没有消费完所有距离，则view本身消费剩余部分（通过滚动位置等方式）并调用dispatchNestedScroll()告诉parent，child消费的情况，parent此时可以再次介入处理。
+
+* 👆 用户抬起手指：在ACTION_UP事件，view会计算是否需要通过fling继续滚动，如果手势中有足够的速度，它将调用dispatchNestedPreFling()以允许嵌套滚动的parent来消费速度。如果parent返回 true （表示消费了速度），则view结束滚动任务。否则，view自己将开始fling，并调用dispatchNestedFling()，告诉parent此情况。并且child会调用stopNestedScroll(TYPE_TOUCH)将嵌套滚动标记为完成，即使view实际上可能正在fling。ACTION_CANCEl的情况就调用stopNestedScroll即可。
+
+* 🎢 开始fling：最后，如果视图开始使用fling自行滚动，我们现在将开始新一轮的嵌套滚动，但这次使用`TYPE_NON_TOUCH`类型。startNestedScroll(TYPE_NON_TOUCH)，然后是dispatchNestedPreScroll(TYPE_NON_TOUCH)+ dispatchNestedScroll(TYPE_NON_TOUCH)，最后是stopNestedScroll(TYPE_NON_TOUCH)。这一次嵌套滚动流程，都是由视图的 fling（通常是Scroller）而不是触摸事件驱动的。
+
+
+|事件类型|嵌套滚动child|嵌套滚动parent|
+|--|--|--|
+|ACTION_DOWN|startNestedScroll(TYPE_TOUCH)|onStartNestedScroll<p>onNestedScrollAccepted|
+|ACTION_MOVE|dispatchNestedPreScroll(TYPE_TOUCH)<p>dispatchNestedScroll(TYPE_TOUCH)|onNestedPreScroll<p>onNestedScroll|
+|ACTION_UP|dispatchNestedPreFling(TYPE_TOUCH)<p>dispatchNestedFling(TYPE_TOUCH)<p>stopNestedScroll(TYPE_TOUCH)|onNestedPreFling<p>onNestedFling|
+|computeScroll|dispatchNestedPreScroll(TYPE_NON_TOUCH)<p>dispatchNestedScroll(TYPE_NON_TOUCH)<p>stopNestedScroll(TYPE_NON_TOUCH)|onNestedPreScroll<p>onNestedScroll|
+
+### 版本历史变化
+* NestedScrollingChild2(parent2配套) 加上TYPE_NON_TOUCH，实现了嵌套fling的传递
+* NestedScrollingChild3(parent3配套) 给原来的dispatchNestedScroll()和onNestedScroll()增加了int[] consumed参数，可以在惯性传递的情况下，让child知道parent消费的量，如果自己和parent都没有消费了，说明都到顶部了，就要停止滚动
+
+### 实现的关注点
+作为child，就是如上面在合适的位置调用`NestedScrollingChild`接口的方法，实现内容使用`NestedScrollingChildHelper`。但一般情况，嵌套滚动的child都是使用现成的控件。
+
+在嵌套滑动中，我们更多的情况，是自定义parent，因为`NestedScrollingParentHelper`帮我们实现了`onNestedScrollAccepted`、`getNestedScrollAxeson`和`StopNestedScroll`方法，大多数情况不用重写，我们大都只需要实现如下方法：
+```
+onStartNestedScroll
+onNestedPreScroll
+onNestedScroll
+onNestedPreFling
+onNestedFling
 ```
 > parent在消费距离（消费距离0也行）时，还可以做一些特定操作，比如我们可以监听到child的滑动从而对一些控件改变透明度，或者其他操作。
 
 > ListView，ScrollView等控件在5.0以下版本没有实现这些接口，最好使用RecyclerView或者NestedScrollView，不然就要自行实现了
-#### 方法3：CoordinatorLayout和behavior
+
+参考：
+* https://chris.banes.dev/carry-on-scrolling/
+* https://juejin.cn/post/6844903761060577294
+
+## CoordinatorLayout和behavior
+嵌套滑动本质上是view之间相互通信、协调。CoordinatorLayout是NestedScrollingParent的子类，并且还介入了布局流程、事件分发等，相当于把嵌套滑动的协调思想，扩展到了布局流程、事件分发等。CoordinatorLayout作为嵌套滑动的parent、布局流程、事件分发的中间协调者，可以解耦CoordinatorLayout的各个child之间的协调操作。这部分我们在单独的文章中介绍。
