--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -24,7 +24,7 @@ https://www.wanandroid.com/wenda/show/11287
             if (actionMasked == MotionEvent.ACTION_DOWN) {
                 //在开始新的触摸手势时丢弃所有先前的状态，包括将mFirstTouchTarget置空
                 cancelAndClearTouchTargets(ev);
-                resetTouchState();
+                resetTouchState();//这里会重置requestDisallowInterceptTouchEvent设置的是否允许拦截的标志位
             }
 
             // 检测是否拦截
