更新Builder模式笔记

--- a/设计模式/创建型模式.md
+++ b/设计模式/创建型模式.md
@@ -294,3 +294,5 @@ class ActorController {
 }
 ```
 如果要创建的产品直接的差异较大，比如很多组成部分都不同，就不适合使用上面这种建造者模式。
+
+如果构造对象的参数个数太多，可以使用set方法，但如果不想或不能暴露set方法，比如不变类（属性都是final），就适合使用Builder模式。对于可以提供set方法的场景，builder模式的优势在于可以在最终的build()函数中做集中的属性配置校验，而如果是set方法，就会分散开，需要多个地方都做类似的校验。
