记录Android中startDrag的使用方式

--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -103,6 +103,7 @@ https://www.wanandroid.com/wenda/show/11287
                                     preorderedList, children, childIndex);
                             ......
                             // 如果子view不可见且动画为空 或者 坐标不在这个子view范围内 就跳过这个子view
+                            // 这里的不可见，只是visibility的属性，所以即使view被遮盖，只要它z轴上方的view没有消费事件，那么它仍可以消费
                             if (!canViewReceivePointerEvents(child)
                                     || !isTransformedTouchPointInView(x, y, child, null)) {
                                 ev.setTargetAccessibilityFocus(false);
