更新协程笔记

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -282,6 +282,8 @@ println("main: Now I can quit.")
 
 异常始终是会被catch住，并传给`AbstractCoroutine`，或者说Job。`AbstractCoroutine`判断是CancellationException就不会继续抛出，所以不会引发崩溃，而其他异常会继续抛出，官方代码中使用`handleOnCompletionException`，其中会先考虑协程上下文中是否设置了`CoroutineExceptionHandler`，如果设置了就让它处理，否则使用默认的线程异常处理器。但如果是使用 async 启动的协程，则异常在调用await函数时才会抛出。
 
+> 需要注意的是，如果抛出异常是异步的，那么协程的处理是无法catch的，比如挂起函数中在一个新线程中抛出了异常，那么即使是CancellationException也会造成崩溃，所以这种情况需要自己去catch处理，或者catch住后使用resumeWithException传递。
+
 [协程中的取消和异常 | 核心概念介绍](https://juejin.cn/post/6844904164774903822)
 [协程中的取消和异常 | 驻留任务详解](https://juejin.cn/post/6883730571848056845)
 [协程中的取消和异常 | 异常处理详解](https://juejin.cn/post/6888259219008126983)
