--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -232,7 +232,7 @@ suspend fun foo(): String {
 ## 6. 取消和异常
 launch函数会返回一个`Job`对象，调用它的`cancel`函数来取消协程。取消协程，当前处于挂起状态（执行但还未返回结果）的挂起函数如果使用的是`suspendCancellableCoroutine`，将抛出`CancellationException`异常，结束当前协程的执行。如果使用的是`suspendCoroutine`，那么不会抛出异常，会继续执行。
 
-虽然使用`suspendCancellableCoroutine()`的挂起函数支持取消，但它并不是神奇的取消。如果在启动协程后，才调用取消，那么挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`会在被调用`cancel()`函数时，把状态改为`CancelledContinuation`，然后主动调用`resumeWith()`带上`CancellationException`异常。如果是先调用`cancel()`，再执行协程中的挂起函数，在`CancellableContinuationImpl`的`getResult()`时判断状态为已取消，就会直接抛出取消异常了。无论是哪种情况，如果我们还是在取消后调用了`resume`，那么它会被忽略。
+虽然使用`suspendCancellableCoroutine()`的挂起函数支持取消，但它并不是神奇的取消。首先，挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`是原本的continuation的包装，这个挂起函数中得到的continuation就是当前协程对应的`ContinuationImpl`，它的context就是协程最终的回调job（也是AbstractCoroutine、continuation）的context，得到这个job就可以注册job取消的监听；所以如果在启动协程后，才调用取消，那么挂起函数的`suspendCancellableCoroutine()`中用到的`CancellableContinuationImpl`会所在协程对应的`Job`被调用`cancel()`函数时，把状态改为`CancelledContinuation`，然后主动调用`resumeWith()`带上`CancellationException`异常。如果是先调用`cancel()`，再执行协程中的挂起函数，在`CancellableContinuationImpl`的`getResult()`时判断状态为已取消，就会直接抛出取消异常了。无论是哪种情况，如果我们还是在取消后调用了`resume`，那么它会被忽略。
 
 了解了取消的工作方式，就知道即使是使用`suspendCancellableCoroutine()`，在被取消的情况下，我们在`suspendCancellableCoroutine()`函数传入的代码块依然会执行，只是取消后调用的`resume`会被忽略而已。所以如果没有检查取消状态从而调整代码逻辑的话，挂起函数内的代码仍然会正常执行完毕。那么，以一个循环为例，要使该代码在业务逻辑上可以被取消，可以在每次循环时检查状态：
 ```
